# CV_LAB

Лабораторная работа  3/lab3/: README.md  lab3.sln
Лабораторная работа  3/lab3/lab3/: lab3.vcxproj  main.cpp  video.avi
Лабораторная работа  3/lab3_2/: README.md
Лабораторная работа  3/lab3_2/lab3/: main.cpp
Лабораторная работа  3/lab3_3/: README.md
Лабораторная работа  3/lab3_3/lab3/: lab3.vcxproj  main.cpp
Лабораторная работа  3/lab3_4/: README.md
Лабораторная работа  3/lab3_4/lab3/: SearchColorObj.h  lab3.vcxproj  lab3.vcxproj.filters  main.cpp
Лабораторная работа  3/lab3_5/: CMakeLists.txt  README.md
Лабораторная работа  3/lab4_5/: README.md  main.cpp
Лабораторная работа 1/: lab1.sln
Лабораторная работа 1/CVTest/: CVTest.vcxproj  main.cpp
Лабораторная работа 2/: OwnFilter.sln
Лабораторная работа 2/OwnFilter/: OwnFilter.vcxproj  OwnFilter.vcxproj.filters  TickMeter.h  main.cpp
Лабораторная работа 4/: README.md
Лабораторная работа 4/Задание 2 и 3/: README.md
Лабораторная работа 4/Задание 2 и 3/CVTest/: CVTest.vcxproj  main.cpp
Лабораторная работа 4/Задание 7/: README.md  main.cpp
Лабораторная работа 4/Задание1/: README.md
Лабораторная работа 4/Задание1/CVTest/: main.cpp
Лабораторная работа 4/Задание4/: README.md
Лабораторная работа 4/Задание4/CVTest/: CVTest.vcxproj  main.cpp
Лабораторная работа 4/Задание5/: README.md
Лабораторная работа 4/Задание6/: README.md  main.cpp
Лабораторная работа 5/: CMakeLists.txt  README.md  aruco_samples_utility.hpp  calibrate_camera.cpp  main.cpp
Лабораторная работа 5/config/: calibration.yml
(+2 files in other folders)
